--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group 'ru.turulin'
@@ -9,18 +10,36 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    cucumberRuntime {
+        extendsFrom testImplementation
+    }
+}
+
 dependencies {
+
+    // rest-assured
+    testImplementation 'io.rest-assured:rest-assured:5.3.1'
+    testImplementation 'io.rest-assured:rest-assured-all:5.3.1'
+
+    // junit 5
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    // для запуска cucumber тестов через junit runner
+    testImplementation 'org.junit.platform:junit-platform-suite-api:1.10.0'
+    testImplementation 'org.junit.platform:junit-platform-runner:1.10.0'
+
     //cucumber
     testImplementation 'io.cucumber:cucumber-java:7.13.0'
     testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.13.0'
-    // для запуска cucumber тестов через junit runner
-    testImplementation 'org.junit.platform:junit-platform-suite-api:1.10.0'
 
     //Allure - Автоматизированная постройка отчета
-    implementation group: 'io.qameta.allure', name: 'allure-cucumber7-jvm', version: '2.20.1'
-    implementation group: 'io.qameta.allure', name: 'allure-testng', version: '2.20.1'
+    implementation 'io.qameta.allure:allure-cucumber7-jvm:2.23.0'
+
+
+    // чтобы логи restAssured добавлялись к allure отчету
+    implementation 'io.qameta.allure:allure-rest-assured:2.23.0'
+
 }
 
 test {
@@ -41,3 +60,4 @@ task cucumber() {
         }
     }
 }
+cucumber.finalizedBy 'allureReport'
