--- a/build.gradle
+++ b/build.gradle
@@ -55,9 +55,11 @@ task cucumber() {
             main = "io.cucumber.core.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
             args = ['--plugin', 'pretty',
-                    '--plugin', 'io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm', '--glue', 'steps', 'src/test/resources']
+                    '--plugin', 'io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm', '--glue', 'steps', 'src/test/resources/features']
             jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
         }
     }
 }
 cucumber.finalizedBy 'allureReport'
+
+tasks { compileTestJava.options.encoding = 'UTF-8' }
